Specified Portuguese (Portugal)

--- a/i18n/pt-pt.yml
+++ b/i18n/pt-pt.yml
@@ -1,4 +1,4 @@
-description: Português
+description: Portuguese (Portugal)
 invoice:
   invoice: Factura
   prepared_for: Facturado a # label for client’s name & address
