Add "Discount" and "Paid" strings to Serbian translation

--- a/i18n/rs.yml
+++ b/i18n/rs.yml
@@ -13,3 +13,5 @@ invoice:
   subtotal: Suma stavke
   total_due: Ukupno za naplatu
   payment_due: Rok plaćanja
+  discount: Popust
+  paid: Plaćeno
