--- a/i18n/nl-be.yml
+++ b/i18n/nl-be.yml
@@ -13,3 +13,6 @@ invoice:
   subtotal: Subtotaal
   total_due: Verschuldigd bedrag
   payment_due: Betaling binnen
+  total: Totaal
+  paid_total: Totaal betaald
+  balance_due: Verschuldigd bedrag
