--- a/i18n/no-ny.yml
+++ b/i18n/no-ny.yml
@@ -15,3 +15,6 @@ invoice:
   payment_due: Forfallsdato
   discount: Rabatt
   paid: Betalt
+  total: Totalt
+  paid_total: Betalt beløp
+  balance_due: Å betale
