Changed paid_total to amount_paid

--- a/i18n/da.yml
+++ b/i18n/da.yml
@@ -16,5 +16,5 @@ invoice:
   discount: Rabat
   paid: Betalt
   total: Total
-  paid_total: Betalt beløb
+  amount_paid: Betalt beløb
   balance_due: Til betaling
