--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -16,5 +16,5 @@ invoice:
   discount: Descuento
   paid: Pagado
   total: Total
-  paid_total: Total Pagado
+  amount_paid: Total Pagado
   balance_due: Saldo Debido
