--- a/i18n/nl-nl.yml
+++ b/i18n/nl-nl.yml
@@ -16,5 +16,5 @@ invoice:
   discount: Korting
   paid: Betaald
   total: Totaal
-  paid_total: Totaal betaald
+  amount_paid: Totaal betaald
   balance_due: Totaal te betalen
