Use localised name for tax

--- a/i18n/en-nz.yml
+++ b/i18n/en-nz.yml
@@ -1,15 +1,15 @@
 description: English (New Zealand)
 invoice:
-  invoice: Tax Invoice
+  invoice: GST Invoice
   prepared_for: Prepared For # label for client’s name & address
   from: From # label for sender’s name & address
   line_items:
     description: Description
     quantity: Quantity
     rate: Rate
-    tax: Tax
+    tax: GST
     total: Total
-  tax_total: Tax
+  tax_total: GST
   subtotal: Subtotal
   total_due: Total Due
   payment_due: Payment Due
