--- a/i18n/en-nz.yml
+++ b/i18n/en-nz.yml
@@ -1,6 +1,6 @@
 description: English (New Zealand)
 invoice:
-  invoice: GST Invoice
+  invoice: Tax Invoice
   prepared_for: Prepared For # label for client’s name & address
   from: From # label for sender’s name & address
   line_items:
