--- a/i18n/hr.yml
+++ b/i18n/hr.yml
@@ -1,4 +1,4 @@
-description: Hrvatski
+description: Croatian
 invoice:
   invoice: Račun
   prepared_for: Klijent # label for client’s name & address
