Added “Date Paid” and English (GB) & Slovenian translations

--- a/i18n/cs.yml
+++ b/i18n/cs.yml
@@ -17,4 +17,5 @@ invoice:
   paid: Zaplaceno
   total: Celkem
   amount_paid: Uhrazená částka
+  date_paid: Datum výplaty
   balance_due: Nedoplatek
