--- a/i18n/nl-be.yml
+++ b/i18n/nl-be.yml
@@ -13,6 +13,9 @@ invoice:
   subtotal: Subtotaal
   total_due: Verschuldigd bedrag
   payment_due: Betaling binnen
+  discount: Korting
+  paid: Betaald
   total: Totaal
   amount_paid: Totaal betaald
+  date_paid: Datum van betaling
   balance_due: Verschuldigd bedrag
